<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_gazebo_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for sim gazebo.</description>
  <maintainer email="bperseghetti@rudislabs.com">Benjamin Perseghetti</maintainer>
  <author email="bperseghetti@rudislabs.com">Benjamin Perseghetti</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rmw</depend>
  <depend>std_srvs</depend>
  <depend>tinyxml_vendor</depend>

  <exec_depend>launch_ros</exec_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
